<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_overview_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/overview_padding_vertical"
    android:paddingEnd="@dimen/content_padding_horizontal"
    android:paddingLeft="@dimen/content_padding_horizontal"
    android:paddingRight="@dimen/content_padding_horizontal"
    android:paddingStart="@dimen/content_padding_horizontal"
    android:paddingTop="@dimen/overview_padding_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:paddingBottom="@dimen/overview_label_padding_bottom"
        android:text="@string/label_overview"
        android:textAllCaps="false"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/headers_text_size"
        android:textStyle="bold"
        app:fontFamily="@font/poiret_one" />

    <TextView
        android:id="@+id/tv_details_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:lineSpacingMultiplier="1.1"
        android:paddingBottom="@dimen/overview_content_padding_bottom"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/content_text_size"
        tools:text="@string/temp_detail_overview_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_release_label"
            style="@style/overview_labels_style"
            android:text="@string/label_release_date"
            app:fontFamily="@font/poiret_one" />

        <TextView
            android:id="@+id/tv_release_date"
            style="@style/date_genres_content_style"
            app:fontFamily="@font/poiret_one"
            tools:text="@string/temp_date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_genres_label"
            style="@style/overview_labels_style"
            android:text="@string/label_genres"
            app:fontFamily="@font/poiret_one" />

        <TextView
            android:id="@+id/tv_genres_content"
            style="@style/date_genres_content_style"
            app:fontFamily="@font/poiret_one"
            tools:text="@string/temp_genres_content" />

    </LinearLayout>

</LinearLayout>