<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/no_internet_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/colorAccent"
    android:padding="@dimen/no_internet_padding">

    <ImageView
        android:id="@+id/error_img"
        android:layout_width="@dimen/no_internet_image_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_desc_no_internet_icon"
        app:srcCompat="@drawable/no_internet_svg_img" />

    <TextView
        android:id="@+id/no_internet_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/error_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/no_internet_title_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/no_favorites_header_text_size"
        android:textStyle="bold"
        app:fontFamily="@font/shadows_into_light_res" />

    <TextView
        android:id="@+id/check_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_internet_header"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/no_internet_subheader_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/no_favorites_message_text_size" />

    <Button
        android:id="@+id/btn_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:text="@string/try_again_label"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16sp" />

</RelativeLayout>