<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/no_favorites_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorAccent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/no_internet_padding">

    <ImageView
        android:id="@+id/error_img"
        android:layout_width="@dimen/no_internet_image_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/no_favorites_top_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_desc_no_favorites_icon"
        android:gravity="center_horizontal"
        app:srcCompat="@drawable/ic_no_favorite_svg_img" />

    <TextView
        android:id="@+id/no_internet_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/no_favorites"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/no_favorites_header_text_size"
        android:textStyle="bold"
        app:fontFamily="@font/shadows_into_light_res" />

    <TextView
        android:id="@+id/check_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/no_favorites_message"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp" />

</LinearLayout>