<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondaryDark">

        <ImageView
            android:id="@+id/movie_poster"
            style="@style/movie_image_style"
            android:contentDescription="@string/content_desc_movie_poster"
            tools:src="@drawable/poster_3_w500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_info_height"
            android:layout_alignBottom="@+id/movie_poster"
            android:layout_alignLeft="@+id/movie_poster"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/movie_poster"
            android:background="@color/list_item_info_background"
            android:minHeight="@dimen/list_item_info_min_height"
            android:orientation="vertical"
            android:paddingEnd="@dimen/list_item_info_padding_horizontal"
            android:paddingLeft="@dimen/list_item_info_padding_horizontal"
            android:paddingRight="@dimen/list_item_info_padding_horizontal"
            android:paddingStart="@dimen/list_item_info_padding_horizontal"
            android:paddingTop="@dimen/item_info_top_padding">

            <TextView
                android:id="@+id/tv_movie_title"
                style="@style/list_item_text_style"
                android:textSize="@dimen/item_title_text_size"
                tools:text="@string/temp_movie_title" />

            <TextView
                android:id="@+id/tv_movie_genre"
                style="@style/list_item_text_style"
                android:textSize="@dimen/item_genres_text_size"
                tools:text="@string/temp_genres_content" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>