<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/trailer_card_width"
    android:layout_height="@dimen/trailer_card_height"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/trailer_card_margin_vertical"
    android:layout_marginEnd="@dimen/trailer_card_margin_horizontal"
    android:layout_marginLeft="@dimen/trailer_card_margin_horizontal"
    android:layout_marginRight="@dimen/trailer_card_margin_horizontal"
    android:layout_marginStart="@dimen/trailer_card_margin_horizontal"
    android:layout_marginTop="@dimen/trailer_card_margin_vertical"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="@dimen/trailer_card_corner"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/trailer_card_padding">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_trailer_preview_image"
            android:layout_width="@dimen/trailer_image_width"
            android:layout_height="@dimen/trailer_image_height"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/content_desc_trailer_preview"
            android:padding="@dimen/trailer_image_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_04_hqdefault_1" />

        <TextView
            android:id="@+id/tv_trailer_title"
            style="@style/list_item_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:ellipsize="end"
            android:padding="12dp"
            android:textSize="@dimen/item_title_text_size"
            android:textStyle="bold"
            tools:text="@string/trailer_name" />

        <TextView
            android:id="@+id/tv_trailer_type"
            style="@style/list_item_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="end"
            android:padding="12dp"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp"
            tools:text="Trailer" />

        <ImageView
            android:id="@+id/trailer_play_button"
            android:layout_width="@dimen/play_button_size"
            android:layout_height="@dimen/play_button_size"
            android:layout_gravity="center"
            android:background="#00ffffff"
            android:contentDescription="@string/content_desc_trailer_play_button"
            app:srcCompat="@drawable/ic_play_circle_filled_black_24dp" />

    </FrameLayout>

</android.support.v7.widget.CardView>